Fixed tests and class exposure